test/files/neg/t4166.check
t4166.scala:3: error: Cannot access enclosing instance from a class local to a constructor invocation.
class Demo extends Base(new { Demo.this.toString }) {
                              ^
one error found
